# coriolis-pdk-sky130-c4m

./: build-LIP6.sh  meson.build  pyproject.toml
packaging/: coriolis-pdk-nsx2-rpmlintrc  coriolis-pdk-nsx2.dsc  coriolis-pdk-nsx2.spec  coriolis-pdk-sky130-c4m.spec  debian.changelog  debian.control  debian.copyright  debian.rules  patchvenv.sh  uploadOBS.sh
pdkmaster/: __init__.py
pdkmaster/C4M.Sky130/libs.ref/StdCellLib/spice/: and21nor_x0.spi  and21nor_x1.spi  and2_x1.spi  and3_x1.spi  and4_x1.spi  buf_x1.spi  buf_x2.spi  buf_x4.spi  decap_w0.spi  dff_x1.spi  dffnr_x1.spi  diode_w1.spi  fill.spi  fill_w2.spi  fill_w4.spi  inv_x0.spi  inv_x1.spi  inv_x2.spi  inv_x4.spi  mux2_x1.spi  nand2_x0.spi  nand2_x1.spi  nand3_x0.spi  nand3_x1.spi  nand4_x0.spi  nand4_x1.spi  nexor2_x0.spi  nor2_x0.spi  nor2_x1.spi  nor3_x0.spi  nor3_x1.spi  nor4_x0.spi  nor4_x1.spi  nsnrlatch_x0.spi  nsnrlatch_x1.spi  one_x1.spi  or21nand_x0.spi  or21nand_x1.spi  or2_x1.spi  or3_x1.spi  (+14 more)
pdkmaster/C4M.Sky130/libs.ref/StdCellLib/verilog/: stdcell.v
pdkmaster/C4M.Sky130/libs.tech/coriolis/sky130/: StdCellLib_fix.py  __init__.py  techno.py  techno_fix.py
pdkmaster/C4M.Sky130/libs.tech/coriolis/sky130/core2chip/: sky130.py
