
[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "coriolis-pdk-sky130-c4m"
version = "2025.12.31"
authors = [ { name="Jean-Paul Chaput", email="Jean-Paul.Chaput@lip6.fr" }
          , { name="Staf Verhaegen"  , email="staf@fibraservi.eu" }
          , { name="Ali Oudrhiri"    , email="ali.oudrhiri@lip6.fr" }
          ]
description = "Chips4Makers PDK Master for Coriolis / SkyWater 130A"
readme = "README.rst"
license = { text="GPL-2.0-or-later" }
keywords = [ "vlsi", "pdk" ]
classifiers = [ "Development Status :: 3 - Alpha" 
              , "Programming Language :: Python :: 3.8"
              ]

[project.urls]
Homepage = "https://gitlab.com/Chips4Makers"
